Image files optimised. Frontpage added.

--- a/MVP01/2. SETUP/2.0 GUI/Flask app/templates/index.html
+++ b/MVP01/2. SETUP/2.0 GUI/Flask app/templates/index.html
@@ -4,8 +4,10 @@
 {% block content1 %}    <a href="{{ url_for('realisations') }}"><button>Start</button></a>
 {% endblock %}
 {% block side1 %}
+
 {% endblock %}
 {% block content2 %}
+<img width="500" src="/static/Pages/PlusMinusFrontOld.png">
 {% endblock %}
 {% block side2 %}
 {% endblock %}
