--- a/MVP01/2. SETUP/2.0 GUI/Flask app/templates/basic_layout.html
+++ b/MVP01/2. SETUP/2.0 GUI/Flask app/templates/basic_layout.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">Logo</div>
+            <div class="logo"><strong>Plus Minus</strong></div>
             <div class="title">{% block title %}{% endblock %}</div>
             <div class="breadcrumbs">{% block crumb %}{% endblock %}</div>
         </header>
